2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/actor.hg: implement Scriptable interface
	* clutter/src/behaviour-bspline.hg: implement Scriptable interface
	* clutter/src/behaviour-path.hg: implement Scriptable interface
	* clutter/src/scriptable.hg: remove errant actor.h include

2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/clutter_vfuncs.defs:
	* clutter/src/scriptable.ccg:
	* clutter/src/scriptable.hg: add new Scriptable Interface

2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm.h:
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/clutter_signals.defs:
	* clutter/src/script.ccg:
	* clutter/src/script.hg:
	* tools/extra_defs_gen/generate_defs_clutter.cc:
	Added Script class.  A lot of it is still marked with TODOs since I haven't
	thought about how to handle the signal connection stuff in C++.

2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/shader.ccg:
	* clutter/src/shader.hg:
	* clutter/src/Makefile_list_of_hg.am_fragment: add new Shader class
	* clutter/cluttermm.h: add score.h and shader.h to main include header
	* clutter/src/clutter_signals.defs:
	* tools/extra_defs_gen/generate_defs_clutter.cc: generate defs for new
	Shader and Score classes

2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-opacity.hg: wrapped a couple missing methods

2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/score.ccg:
	* clutter/src/score.hg:
	* clutter/src/Makefile_list_of_hg.am_fragment: add new Score class
	* clutter/src/clutter_docs_override.xml: override some documentation for the
	Score class since I overloaded append() with a NULL parameter for parent

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* examples/test-actors.cc: update example to use new BehaviourScale
	constructor API

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>
